[package]
name = "gimli-aead"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
description = "The Gimli-permutation based Aead"
repository = "https://github.com/quininer/gimli"
keywords = [ "lightweight", "hash", "cryptography" ]
categories = [ "cryptography", "no-std" ]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
simd = [ "gimli-permutation/simd" ]

[dependencies]
byteorder = { version = "1", default-features = false }
gimli-permutation = { version = "0.1", path = "../permutation" }

[dev-dependencies]
hex = "0.3"
