[package]
name = "gimli-aead"
version = "0.2.0"
authors = ["quininer <quininer@live.com>"]
description = "The Gimli-permutation based Aead"
repository = "https://github.com/quininer/gimli"
keywords = [ "lightweight", "hash", "cryptography" ]
categories = [ "cryptography", "no-std" ]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
simd = [ "gimli-permutation/simd" ]

[dependencies]
gimli-permutation = { version = "0.2", path = "../permutation" }

[dev-dependencies]
criterion = "0.3"
ring = "0.16"
hex = "0.4"

[[bench]]
name = "bench"
harness = false
