[package]
name = "gimli-aead"
version = "0.2.0"
authors = ["quininer <quininer@live.com>"]
description = "The Gimli-permutation based Aead"
repository = "https://github.com/quininer/gimli"
keywords = [ "lightweight", "hash", "cryptography" ]
categories = [ "cryptography", "no-std" ]
license = "MIT"
edition = "2021"

[features]
simd = [ "gimli-permutation/simd" ]

[dependencies]
gimli-permutation = { version = "0.2", path = "../permutation" }

[dev-dependencies]
hex = "0.4"
