[package]
name = "gimli-hash"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
description = "The Gimli-Hash"
repository = "https://github.com/quininer/gimli"
license = "MIT"


[features]
# simd = [ "gimli-permutation/simd" ]

[dependencies]
byteorder = { version = "1", default-features = false }
gimli-permutation = "0.1"

[dev-dependencies]
hex = "0.3"
