[package]
name = "gimli-permutation"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
description = "Gimli: a cross-platform permutation"
repository = "https://github.com/quininer/gimli"
license = "MIT"

[dependencies]
coresimd = { git = "https://github.com/rust-lang-nursery/stdsimd", optional = true }

[features]
simd = [ "coresimd" ]
