[package]
name = "gimli-hash"
version = "0.1.4"
authors = ["quininer <quininer@live.com>"]
description = "The Gimli-permutation based Hash"
repository = "https://github.com/quininer/gimli"
keywords = [ "lightweight", "hash", "cryptography" ]
categories = [ "cryptography", "no-std" ]
license = "MIT"
edition = "2018"

[features]
simd = [ "gimli-permutation/simd" ]

[dependencies]
byteorder = { version = "1", default-features = false }
gimli-permutation = { version = "0.1", path = "../permutation" }

[dev-dependencies]
hex = "0.3"
