[package]
name = "gimli-hash"
version = "0.1.5"
authors = ["quininer <quininer@live.com>"]
description = "The Gimli-permutation based Hash"
repository = "https://github.com/quininer/gimli"
keywords = [ "lightweight", "hash", "cryptography" ]
categories = [ "cryptography", "no-std" ]
license = "MIT"
edition = "2018"

[features]
simd = [ "gimli-permutation/simd" ]

[dependencies]
gimli-permutation = { version = "0.2", path = "../permutation" }

[dev-dependencies]
hex = "0.4"
