[package]
name = "gimli-permutation"
version = "0.1.5"
authors = ["quininer <quininer@live.com>"]
description = "Gimli: a cross-platform permutation"
repository = "https://github.com/quininer/gimli"
keywords = [ "permutation", "cryptography", "simd" ]
categories = [ "cryptography", "no-std" ]
license = "MIT"
edition = "2018"

[dependencies]
packed_simd = "0.3"

[features]
simd = []
