[package]
name = "gimli-permutation"
version = "0.2.0"
authors = ["quininer <quininer@live.com>"]
description = "Gimli: a cross-platform permutation"
repository = "https://github.com/quininer/gimli"
keywords = [ "permutation", "cryptography", "simd" ]
categories = [ "cryptography", "no-std" ]
license = "MIT"
edition = "2021"

[dependencies]

[features]
simd = []
